CMAKE_MINIMUM_REQUIRED( VERSION 3.1.0 FATAL_ERROR )

SET ( CRIMILD_CONVERTER_PROJECT_NAME "crimild-converter" )

PROJECT( ${CRIMILD_CONVERTER_PROJECT_NAME} )

SET( CRIMILD_ENABLE_IMPORT ON CACHE BOOL "Enable import module for Crimild" )

ADD_SUBDIRECTORY( crimild )

SET ( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CRIMILD_SOURCE_DIR}/CMakeTools" )

SET( CRIMILD_APP_NAME ${CRIMILD_CONVERTER_PROJECT_NAME} )

SET( CRIMILD_APP_SOURCE_DIRECTORIES 
	src/
)

SET( CRIMILD_APP_INCLUDE_DIRECTORIES 
	src/
)

INCLUDE( ModuleBuildApp )

